# kveditor

./: .gitignore  LICENSE  README  README.md  delete_pyc.sh  kveditor.kv  main.py  memo  pyproject.toml  requirements.txt
kveditor/: android.txt  filechooserdialog.py  kveditor.kv  main.py  messagepopup.py
